--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@react-spring/parallax": "^9.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
     "react-multi-carousel": "^2.6.5",
+    "react-rating": "^2.0.5",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.0",
